tests/negative/gold/pkg_errors_in_pkg/static_test.gold
<pkg:target-1.0>/foo_static.toit:4:3: error: Can't call result of evaluating expression
  "it's" "an error to use a string as target"
  ^~~~~~
Compilation failed.
